[gd_scene load_steps=15 format=3 uid="uid://c0b35l8oeq3i"]

[ext_resource type="Script" uid="uid://chd86x0nlcvtb" path="res://enemy/scripts/enemy.gd" id="1_tpmga"]
[ext_resource type="Shader" uid="uid://dswfobaft0r5x" path="res://enemy/shaders/Hit_flash.tres" id="2_aik1y"]
[ext_resource type="Texture2D" uid="uid://cnbsfn7eerxp5" path="res://assets/Enemy/Orc/Orc-Walk.png" id="3_0lfw3"]
[ext_resource type="FontFile" uid="uid://b2vwkisoh57if" path="res://assets/Fonts/NeoDunggeunmoPro-Regular.ttf" id="4_tbjim"]
[ext_resource type="PackedScene" uid="uid://bmtqqcev8ahoq" path="res://enemy/scenes/hit_box.tscn" id="5_mgbwo"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1exfc"]
resource_local_to_scene = true
shader = ExtResource("2_aik1y")
shader_parameter/tint = Color(1, 1, 1, 1)
shader_parameter/BlendFloat = 0.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hghv2"]
radius = 18.0
height = 47.0

[sub_resource type="Animation" id="Animation_iifgy"]
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy_sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Enemy_sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_0lfw3")]
}

[sub_resource type="Animation" id="Animation_qi2p4"]
resource_name = "Walk_left"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy_sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Enemy_sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_0lfw3")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3yqyl"]
_data = {
&"RESET": SubResource("Animation_iifgy"),
&"walk": SubResource("Animation_qi2p4")
}

[sub_resource type="Animation" id="Animation_kpr8r"]
resource_name = "Hit_Animation"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy_sprite2D:material:shader_parameter/BlendFloat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_1exfc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy_sprite2D:material:shader_parameter/BlendFloat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mo1ky"]
_data = {
&"Hit_Animation": SubResource("Animation_kpr8r"),
&"RESET": SubResource("Animation_1exfc")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kpr8r"]
bg_color = Color(0, 0, 0, 0.435294)

[node name="Enemy" type="CharacterBody2D" groups=["Enemy", "TestEnemy"]]
collision_layer = 2
collision_mask = 3
motion_mode = 1
script = ExtResource("1_tpmga")

[node name="Enemy_sprite2D" type="Sprite2D" parent="."]
z_index = -5
texture_filter = 1
material = SubResource("ShaderMaterial_1exfc")
scale = Vector2(3, 3)
texture = ExtResource("3_0lfw3")
hframes = 8
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1.5)
shape = SubResource("CapsuleShape2D_hghv2")

[node name="WalkAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_3yqyl")
}

[node name="HitAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mo1ky")
}

[node name="TestText" type="Label" parent="."]
visible = false
texture_filter = 1
offset_left = 18.0
offset_top = -26.0
offset_right = 92.0
offset_bottom = 47.0
theme_override_fonts/font = ExtResource("4_tbjim")
theme_override_font_sizes/font_size = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_kpr8r")
text = "<ORC>
(0, 0)
HP: 10
SPEED: 100"

[node name="HitBox" parent="." instance=ExtResource("5_mgbwo")]

[node name="DebuffTimes" type="Node" parent="."]

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_entered"]

[editable path="HitBox"]
